--- a/tex/2017/2/5.tex
+++ b/tex/2017/2/5.tex
@@ -1,2 +1,99 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+\begin{enumerate}
+    \item By taking derivatives with respect to \(t\), we have
+          \[
+              \DiffFrac{x}{t} = 2at,
+          \]
+          and
+          \[
+              \DiffFrac{y}{t} = 2a,
+          \]
+          hence
+          \[
+              \DiffFrac{y}{x} = \frac{2a}{2at} = \frac{1}{t}.
+          \]
+
+          The gradient of the normal will hence be \(-t\), and hence the normal through \(P(ap^2, 2ap)\) will be
+          \[
+              y - 2ap = -p (x - ap^2).
+          \]
+
+          The point \(N(an^2, 2an)\) is also on this line, and hence
+          \[
+              2a (n - p) = -ap (n - p) (n + p).
+          \]
+
+          Since \(n \neq p\), we must have
+          \[
+              2 = -p (n + p).
+          \]
+
+          Given \(p \neq 0\), we have
+          \[
+              n + p = -\frac{2}{p},
+          \]
+          and hence
+          \[
+              n = -p - \frac{2}{p} = -\left(p + \frac{2}{p}\right).
+          \]
+
+    \item The distance between \(P(ap^2, 2ap)\) and \(N(an^2, 2an)\) is given by
+          \begin{align*}
+              \abs*{PN}^2 & = \left(2ap - 2an\right)^2 + \left(ap^2 - an^2\right)^2                                        \\
+                          & = a^2 \left[4 (p - n)^2 + (p - n)^2 (p + n)^2\right]                                           \\
+                          & = a^2 (p - n)^2 \left[4 + 4 \left(-\frac{2}{p}\right)^2\right]                                 \\
+                          & = a^2 \left[p + \left(p + \frac{2}{p}\right)\right]^2 \cdot 4 \left(\frac{p^2 + 1}{p^2}\right) \\
+                          & = 4a^2 \cdot 4 \cdot \frac{(p^2 + 1)^2}{p^2} \cdot \frac{p^2 + 1}{p^2}                         \\
+                          & = 16 a^2 \frac{(p^2 + 1)^3}{p^4}.
+          \end{align*}
+
+          Let \(f(p) = \frac{(p^2 + 1)^3}{p^4}\). By differentiation,
+          \begin{align*}
+              f'(p) & = \frac{3 \cdot 2p \cdot (p^2 + 1)^2 \cdot p^4 - (p^2 + 1)^3 \cdot 4 \cdot p^3}{p^8} \\
+                    & = \frac{2 (p^2 + 1)^2 p^3}{p^8} \left[3p^2 - 2(p^2 + 1)\right]                       \\
+                    & = \frac{2 (p^2 + 1)^2}{p^5} \left(p^2 - 2\right).
+          \end{align*}
+
+          This means that \(f'(p) = 0\) precisely when \(p^2 - 2 = 0\), i.e. \(p = \pm \sqrt{2}\).
+
+          When \(0 < p < \sqrt{2}\), \(f'(p) < 0\), and when \(\sqrt{2} < p\), \(f'(p) > 0\).
+
+          When \(p < -\sqrt{2}\), \(f'(p) < 0\), and when \(-\sqrt{2} < p < 0\), \(f'(p) > 0\).
+
+          This means that when \(p^2 - 2 = 0\) (i.e. \(p = \pm \sqrt{2}\)), \(f(p)\) has a minimum.
+
+          Since \(\abs*{PN}^2 = \frac{16}{a^2} f(p)\) is a positive multiple of \(f(p)\), we must have that \(\abs*{PN}^2\) is minimised when \(p^2 = 2\).
+
+    \item Since \(Q(aq^2, 2aq)\) is on the circle with diameter \(PN\), we must have that \(QP\) and \(QN\) are perpendicular.
+
+          The gradient of \(QP\) is given by
+          \[
+              m_{QP} = \frac{2aq - 2ap}{aq^2 - ap^2} = \frac{2 (q - p)}{(q + p) (q - p)} = \frac{2}{q + p},
+          \]
+          and the gradient of \(QN\) is given by
+          \[
+              m_{QN} = \frac{2aq - 2an}{aq^2 - an^2} = \frac{2 (q - n)}{(q + n) (q - n)} = \frac{2}{q + n}.
+          \]
+
+          Since \(QP\) and \(QN\) are perpendicular, we must have
+          \begin{align*}
+              m_{QP} \cdot m_{QN} = -1 & \iff \frac{2}{q + p} \cdot \frac{2}{q + n} = -1 \\
+                                       & \iff -4 = (q + p)(q + n)                        \\
+                                       & \iff q^2 + (p + n)q + pn = -4                   \\
+                                       & \iff q^2 - \frac{2}{p} \cdot q - p^2 - 2 = -4   \\
+                                       & \iff p^2 - q^2 + \frac{2q}{p} = 2,
+          \end{align*}
+          as desired.
+
+          When \(\abs*{PN}\) is a minimum, we have \(p = \pm \sqrt{2}\), and hence
+          \[
+              2 - q^2 \pm \sqrt{2}q = 2,
+          \]
+          which gives
+          \[
+              q (q \mp \sqrt{2}) = 0.
+          \]
+
+          Hence, \(q = 0\), or \(q = \pm \sqrt{2}\) (which means \(p = q\), which cannot be the case). When \(q = 0\), \(Q(0, 0)\) is at the origin, as desired.
+\end{enumerate}
