fix formatting issues.

--- a/tex/2010/3/8.tex
+++ b/tex/2010/3/8.tex
@@ -69,7 +69,7 @@ where \(C\) is a real constant.
           \begin{align*}
               I(x) & = \exp \int \frac{\sin x - 2 \cos x}{1 + \cos x + 2 \sin x} \Diff x       \\
                    & = \exp \int - \frac{\Diff (1 + \cos x + 2 \sin x)}{1 + \cos x + 2 \sin x} \\
-                   & = \exp (- \ln |1 + \cos x + 2 \sin x|)                                    \\
+                   & = \exp (- \ln \abs*{1 + \cos x + 2 \sin x})                               \\
                    & = \frac{1}{1 + \cos x + 2 \sin x},
           \end{align*}
           and hence
