--- a/tex/2011/3/1.tex
+++ b/tex/2011/3/1.tex
@@ -7,7 +7,7 @@
           \]
           and hence by integration,
           \[
-              \ln |u| = x + \ln|x + 1| + C.
+              \ln \abs*{u} = x + \ln\abs*{x + 1} + C.
           \]
 
           This gives
